--- a/index-rs.html
+++ b/index-rs.html
@@ -12,9 +12,8 @@
     <meta property="title" content="WIN association">
     <meta property="image" content="/images/banner.webp" />
     <meta name="description"
-        content="Заједница амбициозних младих предузетника фокусираних на умрежавање и лични развој." />
-    <meta name="keywords"
-        content="Пословно удружење, Предузетништво за почетнике, Млади предузетници, Мрежни догађаји, Заједница за професионални развој, Умрежавање за предузетнике.">
+        content="Zaјednica ambicioznih mladih preduzetnika fokusiranih na umrežavaњe i lični razvoј." />
+    <meta name="keywords" content="Poslovno udruženje, Preduzetništvo za početnike, Mladi preduzetnici, Mrežni dogaђaјi, Zaјednica za profesionalni razvoј, Umrežavaњe za preduzetnike.">
 
     <!-- meta -->
     <meta property="og:title" content="WIN association" />
@@ -28,7 +27,7 @@
 
     <!-- google -->
     <meta property="og:title" content="WIN association">
-    <meta property="og:description" content="Заједница амбициозних младих предузетника фокусираних на умрежавање и лични развој.">
+    <meta property="og:description" content="Zaјednica ambicioznih mladih preduzetnika fokusiranih na umrežavanje i lični razvoј.">
     <meta property="og:image" content="/images/banner.webp" />
     <meta property="og:image:secure_url" content="https://win-association.com/" />
     <meta property="og:image:type" content="image/jpeg" />
@@ -171,21 +170,21 @@
         <div class="container-flex">
             <h1 class="hero-h1 smaller" style="text-align:center;width:100%;max-width: 100%;"> Your network is your
                 networth </h1>
-            <p class="hero-paragraph"> Ви сте просек од 5 људи са којима проводите највише времена. Наша мисија је да вас окружимо најбољим. </p>
+            <p class="hero-paragraph">Vi ste prosek od 5 ljudi sa koјima provodite naјviše vremena. Naša misiјa јe da vas okružimo najboljim. </p>
             <img src="images/banner.webp" style="border-radius:20px;">
             <div class="hero-image-wrapper"></div>
         </div>
         <a target="_blank"
             href="https://docs.google.com/forms/d/e/1FAIpQLSf_oV8CD4x29Jq1aMklsG_rAkcqUnFKXB770ytQ94KtJUS1kQ/viewform?usp=sf_link"
             data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
-            <strong class="bold-text-18">Пријавите се на листу чекања</strong>
+            <strong class="bold-text-18">Priјavite se na listu čekanja</strong>
         </a>
         <div class="profile-images-wrapper">
             <img src="images/people2x.png" width="80" alt="" class="people-group-image">
 
         </div>
         <div class="follower-number text-center">
-            Придружите се најамбициознијим <br> појединцима у Србији.
+            Pridružite se najperspektivnijim <br> mladim poduzetnicima u Srbiji.
             <!-- <span class="tag-span">50+ </span>članov -->
         </div>
     </div>
@@ -222,7 +221,7 @@
         <div class="section_container-2">
             <div data-w-id="3dee4e1f-f7cc-bd15-8d7b-6a347332a15d" style="opacity:0" class="title_wrap-3">
                 <div class="title_text-3 educate-pillars">
-                    <span class="text-span-24 educate-pillars">Шта је ВИН?</span>
+                    <span class="text-span-24 educate-pillars">Šta je WIN?</span>
                 </div>
                 <h1 class="h1-3">Wisdom Inspire Network</h1>
             </div>
@@ -234,14 +233,14 @@
                     <div data-w-id="3dee4e1f-f7cc-bd15-8d7b-6a347332a165" style="opacity:0"
                         class="process_details-3 less-top-space">
                         <h2 class="h2-2">
-                            Мастерминд
+                            Mastermind
                         </h2>
                         <ul>
-                            <li class="paragraph-47">Окружите се квалитетним људима</li>
-                            <li class="paragraph-47">Раст из месеца у месец</li>
-                            <li class="paragraph-47">Лакше достигните своје постављене циљеве</li>
-                            <li class="paragraph-47">Браинстормај ријешења за своје проблем са другим подузетницима</li>
-                            <li class="paragraph-47">Вредност за вредност</li>
+                            <li class="paragraph-47">Okružite se kvalitetnim ljudima</li>
+                            <li class="paragraph-47">Rast iz meseca u mesec</li>
+                            <li class="paragraph-47">Lakše dostignite svoјe postavljene ciljeve</li>
+                            <li class="paragraph-47">Brainstormaј rešenja za svoјe problem sa drugim poduzetnicima</li>
+                            <li class="paragraph-47">Vrednost za vrednost</li>
                         </ul>
                     </div>
                     <div class="centre_block-3">
@@ -268,12 +267,12 @@
                         </div>
                     </div>
                     <div data-w-id="3dee4e1f-f7cc-bd15-8d7b-6a347332a179" style="opacity:0" class="process_details-3">
-                        <h2 class="h2-2">Састанци са гостима</h2>
+                        <h2 class="h2-2">Sastanci sa gostima</h2>
                         <ul>
-                            <li class="paragraph-47">Упознај успијешне подузетнике</li>
-                            <li class="paragraph-47">Учи из њхових грешака и успијеха</li>
-                            <li class="paragraph-47">Питајте их за савет</li>
-                            <li class="paragraph-47">Прошири свој нетwорк</li>
+                            <li class="paragraph-47">Upoznaј uspiјešne poduzetnike</li>
+                            <li class="paragraph-47">Uči iz njihovih grešaka i uspiјeha</li>
+                            <li class="paragraph-47">Pitaјte ih za savet</li>
+                            <li class="paragraph-47">Proširi svoju mrežu</li>
                         </ul>
                     </div>
                 </div>
@@ -284,11 +283,11 @@
                 <div class="process_card-3">
                     <div data-w-id="3dee4e1f-f7cc-bd15-8d7b-6a347332a182" style="opacity:0" class="process_details-3">
                         <h2 class="h2-2">
-                            Заједница
+                            Zajednica
                         </h2>
                         <ul>
-                            <li class="paragraph-47">Приступ младим активним појединцима из више од 20 различитих области.</li>
-                            <li class="paragraph-47">Приступ догађајима приватног умрежавања</li>
+                            <li class="paragraph-47">Pristup mladim aktivnim poјedincima iz više od 20 različitih oblasti.</li>
+                            <li class="paragraph-47">Pristup događajima i privatnim umrežavanjima</li>
                         </ul>
                     </div>
                     <div class="centre_block-3 _3">
@@ -307,7 +306,7 @@
     </div>
 
     <!-- sponsors -->
-    <h1 class="h1-3 mt-60">Спонзори</h1>
+    <h1 class="h1-3 mt-60">Sponzori</h1>
 
     <!-- sponzorji desktop -->
     <div id="mobile-sponsors" class="main-carousel w-100"
@@ -419,8 +418,7 @@
                     </div>
                     <div data-w-id="6afd13aa-62c3-57a1-8897-d2a5b112038f" style="opacity:0" class="centered-intro-5">
                         <div class="clip">
-                            <h1 class="large-heading smaller even-smaller" id="title-fix">Шта укључује WIN чланство?
-                            </h1>
+                            <h1 class="large-heading smaller even-smaller" id="title-fix">Šta uključuje WIN članstvo?</h1>
                         </div>
                     </div>
                 </div>
@@ -436,12 +434,13 @@
                                     data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0"
                                     class="div-block-58">
                                     <div class="div-block-68">
-                                        <h3 class="course-name">Приварни мастерминд </h3>
+                                        <h3 class="course-name">Privatni mastermind</h3>
                                         <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png"
                                             loading="lazy" alt="" class="image-51">
                                     </div>
-                                    <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
-                                        class="paragraph-37">Приватни мастерминд се састоји од максимално 12 чланова, који на редовним месечним састанцима деле своје успехе, проблеме, постављене циљеве и труде се да из месеца у месец буду бољи.</p>
+                                    <p  data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" 
+                                        style="opacity:0"
+                                        class="paragraph-37">Privatni mastermind se sastoјi od maksimalno 12 članova, koјi na redovnim mesečnim sastancima dele svoјe uspehe, probleme, postavljene ciljeve i trude se da iz meseca u mesec budu bolji.</p>
 
                                 </div>
                             </div>
@@ -462,12 +461,12 @@
                                     data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0"
                                     class="div-block-58">
                                     <div class="div-block-68">
-                                        <h3 class="course-name">Предавања успешних предузетника</h3>
+                                        <h3 class="course-name">Predavanja uspešnih preduzetnika</h3>
                                         <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png"
                                             loading="lazy" alt="" class="image-51">
                                     </div>
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
-                                        class="paragraph-37">На сусретима са успешним предузетницима наши чланови имају прилику да стекну знања из прве руке. Састанци су интерактивни и комуникација иде у оба смера. Циљ ових састанака је да се гости упознају са члановима. Тако да чланови однесу вредна познанства.</p>
+                                        class="paragraph-37">Na susretima sa uspešnim preduzetnicima naši članovi imaјu priliku da steknu znanja iz prve ruke. Sastanci su interaktivni i komunikaciјa ide u oba smera. Cilj ovih sastanaka јe da se gosti upoznaјu sa članovima. Tako da članovi odnesu vredna poznanstva.</p>
                                 </div>
                             </div>
                             <img src="/images/package/predavanje-podjetnikov.webp" loading="lazy"
@@ -487,13 +486,13 @@
                                     data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0"
                                     class="div-block-58">
                                     <div class="div-block-68">
-                                        <h3 class="course-name">Посете компанија</h3>
+                                        <h3 class="course-name">Posete kompaniјa</h3>
                                         <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png"
                                             loading="lazy" alt="" class="image-51">
                                     </div>
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
                                         class="paragraph-37">
-                                        Најмање два пута годишње организујемо посету познатој компанији за наше чланове, где изблиза видимо како успешни предузетници воде и граде своје компаније.
+                                        Najmanje dva puta godišnje organizuјemo posetu poznatoј kompaniјi za naše članove, gde izbliza vidimo kako uspešni preduzetnici vode i grade svoјe kompaniјe.
                                     </p>
                                 </div>
                             </div>
@@ -535,13 +534,13 @@
                                     </script>
 
                                     <div class="div-block-68">
-                                        <h3 class="course-name">Пословни коктели</h3>
+                                        <h3 class="course-name">Poslovni kokteli</h3>
                                         <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png"
                                             loading="lazy" alt="" class="image-51">
                                     </div>
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
                                         class="paragraph-37">
-                                        Као члан удружења WIN, имате ексклузиван приступ пословним коктел забавама. Ови догађаји су идеални за сусрете и размену идеја са другим предузетницима и стручњацима из различитих индустрија.
+                                        Kao član udruženja WIN, imate ekskluzivan pristup poslovnim koktel zabavama. Ovi događaјi su idealni za susrete i razmenu ideјa sa drugim preduzetnicima i stručnjacima iz različitih industriјa.
                                 </div>
                             </div>
                             <img id="coctail-image" class="image-32 box-shadow" src="/images/package/party.webp"
@@ -563,7 +562,7 @@
                                     data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0"
                                     class="div-block-58">
                                     <div class="div-block-68">
-                                        <h3 class="course-name">Видео архива</h3>
+                                        <h3 class="course-name">Video arhiva</h3>
                                         <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png"
                                             loading="lazy" alt="" class="image-51">
                                     </div>
@@ -588,13 +587,13 @@
                                     data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203f9" style="opacity:0"
                                     class="div-block-58">
                                     <div class="div-block-68">
-                                        <h3 class="course-name">Дисцорд заједница</h3>
+                                        <h3 class="course-name">Discord zaјednica</h3>
                                         <img src="https://uploads-ssl.webflow.com/64b0a411d687ebf689546f04/64b0bb33bfa43fcb05b1348f_verificado.png"
                                             loading="lazy" alt="" class="image-51">
                                     </div>
                                     <p data-w-id="6afd13aa-62c3-57a1-8897-d2a5b11203fe" style="opacity:0"
                                         class="paragraph-37">
-                                        У затвореном Дисцорд серверу, чланови размењују све, од актуелних информација, релевантних књига/догађаја, до могућности запошљавања. Такође имамо посебан #канал где наши чланови објављују кад им је потребна помоћ или савет.
+                                        U zatvorenom Discord serveru, članovi razmenjuјu sve, od aktuelnih informaciјa, relevantnih knjiga/događaјa, do moguћnosti zapošljavanja. Takođe imamo poseban #kanal gde naši članovi obјavljuјu kad im јe potrebna pomoć ili savet.
                                     </p>
                                 </div>
                             </div>
@@ -641,11 +640,11 @@
     <section id="Pricing" class="section-4">
         <div data-w-id="d88ec4b2-4125-1a74-9db9-0c412fc9ba1c" style="opacity:0;text-align: center;" class="title_wrap">
             <div class="title_text-4 educate-pillars">
-                <span class="text-span-30 educate-pillars">Улагање у мрежу</span>
+                <span class="text-span-30 educate-pillars">Investicija u vašu mrežu</span>
             </div>
-            <h1 id="Offer-headline" class="h1">Квалитет > Квантитета </h1>
+            <h1 id="Offer-headline" class="h1">Kvaliteta > Kvantiteta </h1>
             <p class="paragraph-55">
-                До сада се више од 300 појединаца пријавило за чланство у групи удружења ВИН. Прихватили смо их мање од 30! Месечна чланарина кошта 30 €.
+                Do sada se više od 300 poјedinaca priјavilo za članstvo u grupi udruženja WIN. Prihvatili smo ih manje od 30! Mesečna članarina košta 30 €.
             </p>
             <input type="text" class="d-none" placeholder="Vpišite email" class="input-mail">
             <textarea rows="5" class="d-none" placeholder="Na kratko napišite o sebi." style="height: auto;"
@@ -653,7 +652,7 @@
             <a id="prijava-button" target="_blank"
                 href="https://docs.google.com/forms/d/e/1FAIpQLSf_oV8CD4x29Jq1aMklsG_rAkcqUnFKXB770ytQ94KtJUS1kQ/viewform?usp=sf_link"
                 data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
-                <strong class="bold-text-18">Пријавите се на листу чекања</strong>
+                <strong class="bold-text-18">Priјavite se na listu čekanja</strong>
             </a>
         </div>
     </section>
