--- a/index-rs.html
+++ b/index-rs.html
@@ -650,7 +650,7 @@
             <textarea rows="5" class="d-none" placeholder="Na kratko napišite o sebi." style="height: auto;"
                 class="input-mail"></textarea>
             <a id="prijava-button" target="_blank"
-                href="https://docs.google.com/forms/d/e/1FAIpQLSf_oV8CD4x29Jq1aMklsG_rAkcqUnFKXB770ytQ94KtJUS1kQ/viewform?usp=sf_link"
+                href="https://forms.gle/tf5uys89yyvsoTfH9"
                 data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
                 <strong class="bold-text-18">Priјavite se na listu čekanja</strong>
             </a>
@@ -1056,7 +1056,7 @@
     <div class="container d-none" style="justify-content: center;margin-left: auto;margin-right: auto;">
         <div class="row">
             <a id="prijava-button" target="_blank"
-                href="https://docs.google.com/forms/d/e/1FAIpQLSf_oV8CD4x29Jq1aMklsG_rAkcqUnFKXB770ytQ94KtJUS1kQ/viewform?usp=sf_link"
+                href="https://forms.gle/tf5uys89yyvsoTfH9"
                 target="_blank" data-w-id="590dc43f-72e9-442f-5c9a-deb93a106e58" class="button-join w-button">
                 <strong class="bold-text-18">Prijavi se na čakalno listo</strong>
             </a>
