--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
                         </a>
 
                         <!-- serbia flag-->
-                        <a  href="index-rs.html" style="margin-left: 1rem;">
+                        <a  href="index-rs.html" class="d-none" style="margin-left: 1rem;">
                             <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32">
                                 <path fill="#1a3d73" d="M1 11H31V21H1z"></path>
                                 <path d="M5,4H27c2.208,0,4,1.792,4,4v4H1v-4c0-2.208,1.792-4,4-4Z" fill="#b8403f"></path>
